# superfastgen

./: .gitignore  .gitmodules  Cargo.toml  README.fr.md  README.ja.md  README.ko.md  README.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  README_fr.md  README_ja.md  README_ko.md  README_vi.md  README_zh_cn.md  README_zh_tw.md  build.rs  debug_ast.txt  pubspec.yaml  request_template.md  superfastgen.yaml
.dart_tool/: package_config.json  package_config_subset
lib/providers/: auth_provider.dart
scripts/: update-tree-sitter.sh
src/: main.rs
src/commands/: assets.rs  freezed_gen.rs  generate.rs  mod.rs  provider_gen.rs
src/utils/: mod.rs  parser.rs  yaml.rs
test_flutter_app/: pubspec.yaml
test_flutter_app/lib/: debug.dart  product.dart  product.g.dart  provider.dart  provider.g.dart  user.dart  user.g.dart
