[package]
name = "superfastgen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
tera = "1.19"       # テンプレートエンジン
rayon = "1.7"       # 並列化用
tree-sitter = "0.20"
tempfile = "3.8"    # テスト用一時ファイル
notify = "6"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cc = "1" # tree-sitter-dart ビルド用（後ほど）
