[package]
name = "superfastgen"
version = "0.1.0"
edition = "2021"
description = "Blazing fast code generator for Dart/Flutter projects with tree-sitter parsing"
license = "MIT"
repository = "https://github.com/shinriyo/superfastgen"
keywords = ["flutter", "dart", "codegen", "freezed", "riverpod", "tree-sitter", "assets"]
categories = ["development-tools", "code-generation"]
authors = ["shinriyo <shinriyo@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/shinriyo/superfastgen"
documentation = "https://github.com/shinriyo/superfastgen#readme"
rust-version = "1.70"

[[bin]]
name = "superfastgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
tera = "1.19"       # テンプレートエンジン
rayon = "1.7"       # 並列化用
tree-sitter = "0.20"
tempfile = "3.8"    # テスト用一時ファイル
notify = "6"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cc = "1" # tree-sitter-dart ビルド用（後ほど）

[[bin]]
name = "update-tree-sitter"
path = "scripts/update-tree-sitter.sh"
